--- a/style.css
+++ b/style.css
@@ -17,6 +17,9 @@ body {
   color: white;
   background: black;
 }
+section{
+  margin-top: 80px;
+}
 .pri-color {
   color: #e6533c;
 }
@@ -32,8 +35,10 @@ body {
 .display-flex {
   display: flex;
 }
-
-.navbar {
+.secondery-color{
+  color: rgba(255, 255, 255, 0.5);
+}
+.navbar, section {
   max-width: 1440px;
   margin: 0 auto;
 }
@@ -60,6 +65,7 @@ body {
 .menubar {
 display: none;
 }
+
 /* banner related styles */
 .banner{
   display: flex;
@@ -96,6 +102,12 @@ display: none;
 .badge > h2{
   font-size: 3rem;
 }
+.badge > p{
+  color: rgba(239, 237, 232, 0.65);
+}
+.badge2 p{
+  color: rgba(239, 237, 232, 0.65);
+}
 .banner-image{
   position: relative;
 }
@@ -121,11 +133,36 @@ display: none;
 .content h2{
   font-size: 2rem;
 }
-
-
 .buttons{
   justify-content: space-around;
 }
+/* change you habits section styles */
+.content{
+  text-align: center;
+}
+.content-title{
+  font-weight: 900;
+  font-size: 3rem;
+}
+.image-card-container{
+  display: flex;
+  justify-content: space-between;
+}
+.cards{
+  text-align: center;
+}
+.title{
+  font-size: 1.25rem;
+  margin: 5px;
+}
+.circle-image{
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
+}
+
+
+
 
 /* responsive for mobile display */
 @media screen and (max-width:576px ) {
@@ -168,6 +205,11 @@ display: none;
     width: 150px;
     left: 30px;
     bottom: 250px;
+  }
+   /* ghange your habits */
+   .image-card-container{
+    flex-direction: column;
+    gap: 20px;
   }
    
 
