--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
   color: white;
   background: black;
 }
-section{
+section, .hero{
   margin-top: 80px;
 }
 .pri-color {
@@ -29,8 +29,9 @@ section{
 .btn-primary {
   background: #e6533c;
   padding: 10px 25px 10px 25px;
-  border-radius: 10px;
+  border-radius: 40px;
   color: #FFFFFF;
+  border: none;
 }
 .display-flex {
   display: flex;
@@ -84,12 +85,12 @@ display: none;
 .banner-content button{
   margin-right: 10px;
 }
-.d-button{
+/* .d-button{
   background: none;
   border: 1px solid #FFFFFF;
   padding: 8px 25px 8px 25px;
 
-}
+} */
 .badge{
   width: 190px;
   background: rgba(255, 255, 255, 0.1);
@@ -160,9 +161,28 @@ display: none;
   height: 250px;
   border-radius: 50%;
 }
+/* hero styles */
+.hero-container{
+  background:#222222 ;
+  justify-content: space-between;
+  border-radius: 20px;
+  padding: 50px;
+  align-items: center;
+}
+.hero-title{
+  font-size: 3rem;
+  font-weight: 900;
+  margin-top: 0;
+  margin-bottom: 20px;
+}
+.hero-des{
+  margin-bottom: 40px;
+}
+.hero-image > img {
+  height: 400px;
+  border-radius: 20px;
 
-
-
+}
 
 /* responsive for mobile display */
 @media screen and (max-width:576px ) {
@@ -212,7 +232,19 @@ display: none;
     gap: 20px;
   }
    
-
+/* hero styles */
+.hero-container{
+  margin: 20px;
+  flex-direction: column;
+  padding: 20px;
+}
+.hero-btn{
+  width: 320px;
+}
+.hero-image > img{
+  height: 250px;
+  margin-top: 20px;
+}
 }
 
 
