--- a/style.css
+++ b/style.css
@@ -18,8 +18,8 @@ body {
   background: black;
 }
 
-section, .hero{
-  margin-top: 80px;
+.margin{
+  margin-top: 60px;
 }
 .pri-color {
   color: #e6533c;
@@ -40,7 +40,7 @@ section, .hero{
 .secondery-color{
   color: rgba(255, 255, 255, 0.5);
 }
-.navbar, section {
+.navbar, .section {
   max-width: 1440px;
   margin: 0 auto;
 }
@@ -209,12 +209,87 @@ display: none;
 .image-6{
   filter:sepia(1) saturate(2) hue-rotate(90deg) brightness(1);;
 }
+.main-text-content{
+  display: flex;
+  justify-content: center;
+}
+/* bmi section
+*************************************** */
+
+.bmi-title{
+  font-size: 3rem;
+  font-weight: 900;
+  margin-bottom: 10px;
+}
+.bmi-main-container{
+  background: rgb(34, 34, 34);
+  height: 400px;
+ 
+}
+.text-title{
+  font-size: 2rem;
+}
+.text-description{
+  margin: 20px 0;
+}
+table{
+  border-collapse: collapse;
+  text-align: left;
+}
+th, td{
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  padding: 10px 30px;
+}
+.bmi-main-container{
+justify-content: space-around;
+}
+td{
+  color: rgba(255, 255, 255, 0.5);
+}
+
+.height-weight, .age-sex{
+  gap:20px ;
+  margin-bottom: 10px;
+}
+.input-field{
+  width: 50%;
+}
+input{
+  background-color:rgba(255, 255, 255, 0.1);
+  padding: 10px 20px;
+  border-radius: 10px;
+  border:none;
+}
+input:focus{
+  outline: none;
+  border: none;
+}
+.select >input{
+ width: 93%;
+ margin-bottom: 10px;
+}
+.input-calc{
+  width: 250px;
+}
+
+.main-text-content{
+  margin-bottom: 60px;
+}
+
+
+
+
+
+
 /* responsive for mobile display */
 @media screen and (max-width:576px ) {
   *{
     margin: 0px;
     padding: 0;
     /* border: 1px solid whitesmoke; */
+  }
+  .margin{
+    margin: 80px 20px;
   }
   .menubar {
     display: block;
@@ -259,7 +334,7 @@ display: none;
    
 /* hero styles */
 .hero-container{
-  margin: 20px;
+  
   flex-direction: column;
   padding: 20px;
 }
@@ -277,15 +352,24 @@ display: none;
 .image-1, .image-2, .image-4, .image-5{
   width: 100%;
   
+  
 }
 
 .image-optional{
   grid-template-columns: repeat(2, 1fr);
-  margin: 0 20px;
- 
 }
+/* bmi styles */
+.bmi-main-container{
+  height: 100%;
+  flex-direction: column;
+  padding: 20px;
+  gap: 40px;
+  
+}
+.select{
+  width: 95%;
 }
 
-
+}
 
 
