--- a/style.css
+++ b/style.css
@@ -278,6 +278,18 @@ input:focus{
 .main-text-content{
   margin-bottom: 60px;
 }
+/* our clients */
+.clients{
+  max-width: 1440px;
+  margin-top: 60px;
+  
+
+}
+.client{
+  width: 100%;
+  height: 400px;
+
+}
 /* meet our team section styles */
 
 .teams{
@@ -472,6 +484,17 @@ hr{
   width: 360px;
   margin: 0 auto;
 }
+.clients{
+  flex-direction: column;
+  margin: 0;
+  
+}
+.client{
+  height: 200px;
+  border-radius: 10px;
+  margin: 10px 0;
+}
+/* footer styles */
 .footer{
   height: 100%;
   margin: 60px 0;
@@ -504,7 +527,7 @@ hr{
   margin-bottom: 30px;
 }
 }
-/* footer styles */
+
 
 
 
